feat: add favicon and title, remove commented code

--- a/src/app.html
+++ b/src/app.html
@@ -2,23 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<title>Extensionly</title>
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
 			rel="stylesheet"
 		/>
-		<!-- Preloads only regular typefont -->
-		<!-- <link rel="preload" href="/fonts/Montserrat-Regular.woff2" as="font" crossorigin="anonymous" /> -->
-		<!-- <link
-			rel="preload"
-			href="/fonts/Montserrat-ExtraBold.woff2"
-			as="font"
-			crossorigin="anonymous"
-		/>
-		<link rel="preload" href="/fonts/Montserrat-Medium.woff2" as="font" crossorigin="anonymous" /> -->
-		<!-- <link rel="preload" href="/fonts/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous" /> -->
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
